--- a/CasCardProfile.html
+++ b/CasCardProfile.html
@@ -14,7 +14,7 @@
 <title>CasCardProfile</title>
 <!-- write your code here -->
 <script src="https://code.createjs.com/1.0.0/createjs.min.js"></script>
-<script src="CasCardProfile.js"></script>
+<script src="CasCardProfile.js?1633145913803"></script>
 <script>
 var canvas, stage, exportRoot, anim_container, dom_overlay_container, fnStartAnimation;
 function init() {
