--- a/template.html
+++ b/template.html
@@ -16,6 +16,50 @@
 <script src="https://code.createjs.com/1.0.0/createjs.min.js"></script>
 <script src="template.js"></script>
 <script>
+// Global Scripts
+	gbl_txt=`
+]]Scene 
+Lily_Rest
+]]Image
+S_Lily_Rest
+]]Portrait
+Narrator
+]]Text
+Meanwhile, not far away, the woman they were searching for found a moment of respite hiding in an area behind some purplish-black crystal growth. She was quite winded and was struggling to catch her breath.
+]]Portrait
+Eva_Standard
+]]Text
+Whirling around to scan the immediate surroundings. “Current Location unknown… Warning! Seven thousand low tier voidsent detected in immediate vicinity, three voidsent not able to be quantified also in vicinity… Immediate evacuation recommended… request instructions.” The machine blurted, glowing red as it continued to perform its scan of the new surroundings.
+]]Portrait
+Lily_Tired
+]]Text
+Still gasping for air, the woman put her back to the crystal and then slid down to sit for a moment. “Haaaa….. So you don't….. Know where.....we are?” She almost cried from the silliness of that statement. She took a moment to catch her breath 
+]]Portrait
+Lily_Standard
+]]Text
+“Silly Eva, we are in the void, the thirteenth shard of our world, we got sucked into the aetherial tear” 
+]]Portrait
+Lily_Ponder
+]]Text
+She considered for a moment. “Eva, report on your aether reserves, do you have enough to help me open a new tear?” 
+]]Portrait
+Lily_Explain
+]]Text
+I should need perhaps eighty percent of your maximum, and if you help me we can open a way home for us.”
+]]Portrait
+Eva_Standard
+]]Text
+Eva was the designation of the node that was assisting the mage. “Aether reserves at seventy one percent, full usage will result in extended shutdown of this unit pending recharge.”
+]]Portrait
+Lily_Ponder
+]]Text
+Lily pondered, tapping her knuckle to her chin as she considered. “See if you can charge from these crystals here Eva, disable your protection circuits if you have to we need you to get that aether quickly” 
+]]Portrait
+Lily_Standard
+]]Text
+Lily was nervous when she suggested that, it was actually quite a risk to Eva, but she saw no other options to charge the Node.
+`</script>
+<script>
 var canvas, stage, exportRoot, anim_container, dom_overlay_container, fnStartAnimation;
 function init() {
 	canvas = document.getElementById("canvas");
