--- a/template.html
+++ b/template.html
@@ -19,6 +19,56 @@
 // Global Scripts
 	gbl_txt=`
 ]]Scene 
+Imp_Patrol
+]]Image
+S_WoD1
+]]Portrait
+Narrator
+]]Text
+Falling footsteps in the distance could be heard as someone was running, searching for a place to hide. Tap tap tap tap tap, a not rhythmic sound as someone clearly not physically fit was trying to run away and hide. >>>
+]]Text
+Not far away, a patrol of imps, a minor type of voidsent was desperately searching for this fleeing woman.
+]]Portrait
+Arkeisios
+]]Text
+“Where did she go!?”
+]]Portrait
+Fames
+]]Text
+“You were the one that had her restrained, ~~YOU~~ tell me where she went!”
+]]Portrait
+Arkeisios
+]]Text
+“She just disappeared right in front of my eyes, she just ‘Vanish’ed!”
+]]Portrait
+Minos
+]]Text
+Frustrated, the squad leader silenced the troops. “SILENCE! If we don’t re-capture her after dragging her into the void, the Emperor will have us ‘disintegrated’. As Minos spoke his voice trembled slightly in fear.
+]]Portrait
+Narrator
+]]Text
+The two Imps looked to each other, a pin drop could be heard in the sudden silence as the squabble ended just then. A scout Imp came rushing towards the group.
+]]Portrait
+Sithon
+]]Text
+“There you are, I have been searching all over for you. Ophellia says she is ready for soul extraction so you had better hurry and take the captured woman to the castle… wait, where is she?” >>>
+]]Text
+Sithon was seemingly exhausted from rushing so quickly that it just then noticed the situation.
+]]Portrait
+Minos
+]]Text
+“It seems she was more resourceful than we were told, she used some trick to escape.” Minos then sent up a flare to put all nearby patrols on alert. “We will find her, the Emperor will still have her soul.”
+]]Portrait
+Sithon
+]]Text
+Snorting in disgust “Useless soldiers, you had better hope you find her, if you don’t you will be lucky if the Emperor only has you killed, it is more likely he will allow Ophellia to experiment on you, >>> 
+]]Text
+she has gotten very good at creating Chimera out of damned voidsent from what I saw, although it is clear they suffer."
+]]Portrait
+Minos
+]]Text
+“Lets split up to search, send up a flare when you find her, you two go that way and Sithon you come with me.”
+]]Scene 
 Lily_Rest
 ]]Image
 S_Lily_Rest
@@ -29,11 +79,15 @@ Meanwhile, not far away, the woman they were searching for found a moment of res
 ]]Portrait
 Eva_Standard
 ]]Text
-Whirling around to scan the immediate surroundings. “Current Location unknown… Warning! Seven thousand low tier voidsent detected in immediate vicinity, three voidsent not able to be quantified also in vicinity… Immediate evacuation recommended… request instructions.” The machine blurted, glowing red as it continued to perform its scan of the new surroundings.
+Whirling around to scan the immediate surroundings. "Current Location unknown… Warning! Seven thousand low tier voidsent detected in immediate vicinity, three voidsent not able to be quantified also in vicinity…"  >>>
+]]Text
+"Immediate evacuation recommended… request instructions.” The machine blurted, glowing red as it continued to perform its scan of the new surroundings.
 ]]Portrait
 Lily_Tired
 ]]Text
-Still gasping for air, the woman put her back to the crystal and then slid down to sit for a moment. “Haaaa….. So you don't….. Know where.....we are?” She almost cried from the silliness of that statement. She took a moment to catch her breath 
+Still gasping for air, the woman put her back to the crystal and then slid down to sit for a moment. “Haaaa….. So you don't….. Know where.....we are?” 
+]]Text
+She almost cried from the silliness of that statement. She took a moment to catch her breath. 
 ]]Portrait
 Lily_Standard
 ]]Text
