--- a/template.html
+++ b/template.html
@@ -25,7 +25,7 @@ S_WoD1
 ]]Portrait
 Narrator
 ]]Text
-Falling footsteps in the distance could be heard as someone was running, searching for a place to hide. Tap tap tap tap tap, a not rhythmic sound as someone clearly not physically fit was trying to run away and hide. >>>
+Falling footsteps in the distance could be heard as someone was running, searching for a place to hide. Tap tap tap tap tap, a not rhythmic sound as someone clearly not physically fit was trying to run away and hide. > > >
 ]]Text
 Not far away, a patrol of imps, a minor type of voidsent was desperately searching for this fleeing woman.
 ]]Portrait
@@ -79,7 +79,7 @@ Meanwhile, not far away, the woman they were searching for found a moment of res
 ]]Portrait
 Eva_Standard
 ]]Text
-Whirling around to scan the immediate surroundings. "Current Location unknown… Warning! Seven thousand low tier voidsent detected in immediate vicinity, three voidsent not able to be quantified also in vicinity…"  >>>
+Whirling around to scan the immediate surroundings. "Current Location unknown… Warning! Seven thousand low tier voidsent detected in immediate vicinity, three voidsent not able to be quantified also in vicinity…"  > > >
 ]]Text
 "Immediate evacuation recommended… request instructions.” The machine blurted, glowing red as it continued to perform its scan of the new surroundings.
 ]]Portrait
@@ -112,6 +112,102 @@ Lily pondered, tapping her knuckle to her chin as she considered. “See if you 
 Lily_Standard
 ]]Text
 Lily was nervous when she suggested that, it was actually quite a risk to Eva, but she saw no other options to charge the Node.
+]]Scene 
+Imp_Search
+]]Image
+S_Imp_Search
+]]Portrait
+Sithon
+]]Text
+Sithon was floating along with the patrol “They managed to capture her in the void gate, how did they let her escape!”. Once again, she was cursing the patrol of soldiers.
+]]Portrait
+Minos
+]]Text
+ “The woman has some control over darkness and overcame her captors. It's why master wants to capture her dead or alive doesn't matter really, he just needs a taste of her aether, > > >
+]]Text
+although it is preferable to extract her soul for future use.”
+]]Portrait
+Sithon
+]]Text
+ “So you're saying we can feast a little bit and just have to take back a piece, it has been long since I have tasted living aether.”
+]]Portrait
+Narrator
+]]Text
+In the distance, some sparking can be heard and an excited shout from a woman perhaps.
+]]Portrait
+Sithon
+]]Text
+ “Over there!”, the young imp immediately charged over. Sithon was a research aide, not a soldier and had no mind for tactics.
+]]Portrait
+Minos
+]]Text
+ “Careful to not engage her alone! She already escaped once!” Minos grumbled, Sithon had already scolded his unit and now was going to alert his prey to their approach. > > >
+]]Text
+Since she was charging ahead of him, he had no choice but to send up a flare instead of investigating the situation first.
+]]Scene
+The_Attack
+]]Image
+S_Lily_Rest
+]]Portrait
+Eva_Charged
+]]Text
+Eva dropped to the floor after a rapid charge, electric sparks discharging here and there from the node’s chassis.
+]]Portrait
+Lily_Alert
+]]Text
+Lily shouted “EVA!! Get up, That is surely enough for us to go” She was worried the loud noise would alert searchers to her location.
+]]Portrait
+Eva_Standard
+]]Text
+Eva’s chassis lights flashed briefly before the node floated again. “Unit charge 81%, remaining bank was overloaded.”
+]]Portrait
+Sithon
+]]Text
+Sithon appeared at that moment; “Mortal Woman, your aether belongs to us now.”  Sithon charged in abruptly, but then realized she had no idea what to do, > > >
+]]Text
+and so instead Sithon began preparing herself with Ice Spikes armor. 
+]]Image
+S_Lily_Attacked
+]]Portrait
+Minos
+]]Text
+Seeing the situation ahead, Minos decided he must act quickly to remove the chance of her escape again. Without warning its eye flashes red and it used ‘Level 5 Petrify’.
+]]Portrait
+Lily_Scared
+]]Text
+Lily and Eva quickly moved out of the way. “EEEE, you could have killed me!” Lily brandished her staff, which glowed black and purple as it had been long ago imbued with dark power. 
+]]Text
+“Allagan Fire!” She set voidsent the voidsent ablaze, at a temperature high enough its flesh began to melt, the beast expired immediately. 
+]]Portrait
+Lily_Alert
+]]Text
+“This way Eva, let's open an aetherial tear here and go home.” Lily began running full speed with Eva just beside her.
+]]Portrait
+Sithon
+]]Text
+Sithon froze for a moment, before she began shouting. “She is here!!” And began charging after Lily, more confident now that Ice Spikes was giving her some protection.
+]]Image
+S_Lily_Run
+]]Portrait
+Lily_Scared
+]]Text
+Panting, Lily was using up almost all of her aether to start opening a tear to get back to the source as she ran 
+]]Text
+“Now EVA, the tear is started, supplement it with the Aether you have.”
+]]Portrait
+Eva_Standard
+]]Text
+Eva beeped an affirmative tone, and discharged a pulse of aether into the tear Lily started to open. 
+]]Text
+The lights on the Node shut off and the machine expended all its remaining energy into the task.
+]]Portrait
+Lily_Scared
+]]Text
+Lily shouted “EVA! Oh no you dont!” She caught EVA as the node fell, and leapt into the aetherial tear. 
+]]Portrait
+Lily_Alert
+]]Text
+Expecting to find herself back in her ship and once again guarded by her machine guardians. She thought herself quite clever to escape back to safety…
 `</script>
 <script>
 var canvas, stage, exportRoot, anim_container, dom_overlay_container, fnStartAnimation;
