--- a/template.html
+++ b/template.html
@@ -19,7 +19,7 @@
 // Global Scripts
 	gbl_txt=`
 ]]Scene 
-Imp_Patrol
+Escaped Capture
 ]]Image
 S_WoD1
 ]]Portrait
@@ -69,7 +69,7 @@ Minos
 ]]Text
 “Lets split up to search, send up a flare when you find her, you two go that way and Sithon you come with me.”
 ]]Scene 
-Lily_Rest
+Lily's Respite
 ]]Image
 S_Lily_Rest
 ]]Portrait
@@ -113,7 +113,7 @@ Lily_Standard
 ]]Text
 Lily was nervous when she suggested that, it was actually quite a risk to Eva, but she saw no other options to charge the Node.
 ]]Scene 
-Imp_Search
+The Imp Search
 ]]Image
 S_Imp_Search
 ]]Portrait
@@ -145,7 +145,7 @@ Minos
 ]]Text
 Since she was charging ahead of him, he had no choice but to send up a flare instead of investigating the situation first.
 ]]Scene
-The_Attack
+The Attack!
 ]]Image
 S_Lily_Rest
 ]]Portrait
@@ -177,7 +177,7 @@ Lily_Scared
 ]]Text
 Lily and Eva quickly moved out of the way. “EEEE, you could have killed me!” Lily brandished her staff, which glowed black and purple as it had been long ago imbued with dark power. 
 ]]Text
-“Allagan Fire!” She set voidsent the voidsent ablaze, at a temperature high enough its flesh began to melt, the beast expired immediately. 
+“Allagan Fire!” She set the voidsent ablaze, at a temperature high enough its flesh began to melt, the beast expired immediately. 
 ]]Portrait
 Lily_Alert
 ]]Text
